# league-multi-tool-llm-agent

./: .dockerignore  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  scrapy.cfg  test.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yml  postCreate.sh
ollama/: Dockerfile  init-ollama.sh
src/league_multi_tool_llm_agent/: settings.py
src/league_multi_tool_llm_agent/db/: ingest.py  llm_utils.py  rag.sql  rag_db_model.py  rag_service.py  retriveal.py  utils.py
src/league_multi_tool_llm_agent/evaluation/: agents.py  configs.py  dataclasses.py  run_evaluation.py  test.py  utils.py
src/league_multi_tool_llm_agent/graph/: agents.py  capability_nodes.py  catch_all_node.py  opgg_nodes.py  prompt_cache.py  prompting_techniques.py  smoke_test.py  system_nodes.py  utils.py
src/league_multi_tool_llm_agent/integrations/opgg/: __init__.py  client.py  field_presets.py  types.py
src/league_multi_tool_llm_agent/models/: agent_config.py  champion.py  graph_models.py  patch_note.py  rag_configs.py  rag_models.py
src/league_multi_tool_llm_agent/protocols/: agent.py
src/league_multi_tool_llm_agent/scripts/: scrape_champion_details.py  setup_colab_postgres.sh  smoke_test_opgg_mcp_client.py  test_mcp.py
src/league_multi_tool_llm_agent/spiders/: champion_spider.py  lol_patch_notes_spider.py  pipelines.py
src/league_multi_tool_llm_agent/ui/: gradio_app.py
